2004-04-19  MenTaLguY <mental@rydia.net>

    * src/arc-context.h, src/arc-context.cpp, src/desktop.cpp, src/desktop.h,
	  src/draw-context.cpp, src/draw-context.h, src/node-context.cpp,
	  src/node-context.h, src/rect-context.cpp, src/rect-context.h,
	  src/selection.cpp, src/selection.h, src/seltrans.cpp, src/seltrans.h,
	  src/spiral-context.cpp, src/spiral-context.h, src/text-context.cpp,
	  src/text-context.h, src/toolbox.cpp:

	  migrated SPSelection to SigC++ signals (though it's a bit messy
	  right now)

2004-04-19  Peter  <pmoulder@mail.csse.monash.edu.au>

	* src/dialogs/stroke-style.cpp: Cleanups: greater conformance to
	CodingStyle.  Moved some declarations to their first use.

2004-04-19  Carl Hetherington <inkscape@carlh.net>

	* src/dialogs/stroke-style.cpp, libnr/nr-rect-l.cpp:
	Fix a couple of compiler warnings.

	* src/dialogs/filedialog-win32.cpp: add OFN_NOCHANGEDIR to Win32
	flags in OPENFILENAME structs.  This prevents the open / save
	boxes from changing the current directory.  Any change to the
	current directory causes problems for subsequent attempts to
	load icons from pixmaps.  Also, fix a bug whereby the save
	dialogue would sometimes not open due to being passed a filename
	it didn't like.

2004-04-19  bulia byak <bulia@users.sourceforge.net>

	* shortcuts.cpp selection-chemistry.cpp selection-chemistry.h verbs.cpp verbs.h
	interface.cpp: Clone command (Edit menu, Shift+Ctrl+N)

	* sp-use.cpp: Update propagated to parent class (SPItem), misc fixes
 
	* sp-polygon.cpp: Fix for points= updating by adding set_shape call into _write
	(bug 910142)

	* text-context.cpp: Do not create text object unless a printable key was
	pressed; fixes 934280
 
	* widgets/dash-selector.cpp dialogs/stroke-style.cpp: Removed marker buttons,
	fixed g_free crash in marker menus, added tooltips, added stroke-miterlimit
	spinbutton

	* splivarot.cpp: Outline handles multiple objects; All commands use correct
	stroke_miterlimit
