@@ -730,7 +730,6 @@ inkscape_selection_modified (SPSelection *selection, guint flags)
 {
     g_return_if_fail (inkscape != NULL);
     g_return_if_fail (selection != NULL);
-    g_return_if_fail (SP_IS_SELECTION (selection));
 
     if (DESKTOP_IS_ACTIVE (selection->desktop())) {
         g_signal_emit (G_OBJECT (inkscape), inkscape_signals[MODIFY_SELECTION], 0, selection, flags);
@@ -743,7 +742,6 @@ inkscape_selection_changed (SPSelection * selection)
 {
     g_return_if_fail (inkscape != NULL);
     g_return_if_fail (selection != NULL);
-    g_return_if_fail (SP_IS_SELECTION (selection));
 
     if (DESKTOP_IS_ACTIVE (selection->desktop())) {
         g_signal_emit (G_OBJECT (inkscape), inkscape_signals[CHANGE_SELECTION], 0, selection);
@@ -756,7 +754,6 @@ inkscape_selection_set (SPSelection * selection)
 {
     g_return_if_fail (inkscape != NULL);
     g_return_if_fail (selection != NULL);
-    g_return_if_fail (SP_IS_SELECTION (selection));
 
     if (DESKTOP_IS_ACTIVE (selection->desktop())) {
         g_signal_emit (G_OBJECT (inkscape), inkscape_signals[SET_SELECTION], 0, selection);
