@@ -140,9 +140,6 @@ sp_spiral_context_dispose (GObject *object)
         sc->repr = 0;
     }
 
-    if (SP_EVENT_CONTEXT_DESKTOP (sc)) {
-        sp_signal_disconnect_by_data (SP_DT_SELECTION (SP_EVENT_CONTEXT_DESKTOP (sc)), sc);
-    }
 	G_OBJECT_CLASS (parent_class)->dispose (object);
 }
 
